<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/containerSuperior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/backgroundTopColor"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_string"
            android:textAlignment="center"
            android:textColor="@color/header_text_color"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/containerForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/label_form"
                    android:text="@string/weight_label" />

                <TextView
                    style="@style/label_form"
                    android:text="@string/height_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/etPeso"
                    style="@style/input_form_right"
                    android:hint="@string/weight_placeholder"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/etAltura"
                    style="@style/input_form_left"
                    android:hint="@string/height_placeholder"
                    android:inputType="numberDecimal" />
            </LinearLayout>
            
            <Button android:id="@+id/btCalcular"
                    style="@style/button"
                    android:text="@string/button_label"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/containerInferior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:background="@color/backgroundBottomColor"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/imc_label"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/ivIMCStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tvIMCStatus"
            android:layout_below="@+id/tvIMC"
            tools:src="@drawable/masc_ideal" />
        <TextView
            android:id="@+id/tvIMCStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            tools:text="@string/imc_status_label"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>



</LinearLayout>